# python-rest

./: .flaskenv  .gitignore  LICENSE  README.md  pyproject.toml
python_rest/: __init__.py
python_rest/blueprints/: __init__.py  root.py
tests/: conftest.py
tests/test_blueprints/: test_root.py
