[tool.poetry]
name = "python-rest"
version = "0.1.0"
description = "A sample project showing a basic Flask REST API"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
