[tool.poetry]
name = "python-rest"
version = "0.1.0"
description = "A sample project showing a basic Flask REST API"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.10.3"
pytest = "^5.0"
pytest-flask = "^0.15.0"
black = {version = ">=19",allows-prereleases = true}
mypy = "^0.720.0"
safety = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
